2025-12-31  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.1 released

2025-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Adapt tests.

2025-12-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Adapt tests.

2025-12-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Adapt tests.

2025-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (auto-revert-notify-watch-descriptor)
	(auto-revert-remote-files, auto-revert-use-notify): Declare.  Set
	proper values.
	(tramp-test30-make-process): Adapt test.

2025-12-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test30-make-process): Adapt test.

2025-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file)
	(tramp-test30-make-process): Adapt tests.

2025-12-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file)
	(tramp-test29-start-file-process, tramp-test30-make-process)
	(tramp-test32-shell-command, tramp--test-async-shell-command)
	(tramp--test-supports-processes-p): Adapt for "smb" method.
	(tramp-test34-explicit-shell-file-name)
	(tramp-test45-asynchronous-requests): Skip for "smb" method.
	(tramp--test-check-files): Skip shell test for some special
	characters in the "smb" case.
	(tramp-test52-unload): Disable further tests.

2025-11-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.5 released

2025-11-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test10-write-region)
	(tramp-test10-write-region-file-precious-flag)
	(tramp-test10-write-region-other-file-name-handler)
	(tramp-test27-load, tramp-test32-shell-command)
	(tramp-test32-shell-command-dont-erase-buffer)
	(tramp-test34-connection-local-variables)