@@ -1,3 +1,7 @@
+2026-01-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test03-file-name-defaults): Adapt test.
+
 2025-12-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.8.1 released
